--- a/index.html
+++ b/index.html
@@ -129,7 +129,6 @@
             </nav>
             <a href="" class="btn btn-secondary">
                 <span class="text txt-1">Find a table</span>
-                <span class="text txt-2" aria-hidden="true">Find a table</span>
             </a>
             <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
                 <span class="line line-1"></span>
@@ -232,6 +231,54 @@
             </div>
         </div>
 <br><br><br>
+
+        <!-- Offers -->
+         <div class="offer">
+            <ul class="accordion">
+                <li>
+                    <img src="buy1get1.jpg"/>
+                    <div class="content">
+                        <span>
+                            <h2>Offer 1</h2>
+                            <p>Offer 1 description</p>
+                        </span>
+                    </div>
+                </li>
+
+                <li>
+                    <img src="happyhour.jpg"/>
+                    <div class="content">
+                        <span>
+                            <h2>Offer 1</h2>
+                            <p>Offer 1 description</p>
+                        </span>
+                    </div>
+                </li>
+
+                <li>
+                    <img src="arabicacoffee.jpg"/>
+                    <div class="content">
+                        <span>
+                            <h2>Offer 1</h2>
+                            <p>Offer 1 description</p>
+                        </span>
+                    </div>
+                </li>
+
+                <li>
+                    <img src="buy3get1.jpg"/>
+                    <div class="content">
+                        <span>
+                            <h2>Offer 1</h2>
+                            <p>Offer 1 description</p>
+                        </span>
+                    </div>
+                </li>
+            </ul>
+         </div>
+
+<br><br><br>
+
         <!-- Footer -->
          <footer class="site-footer" id="footer">
             <div class=" top-footer section">
