--- a/coffee.html
+++ b/coffee.html
@@ -11,9 +11,9 @@
   <div class="container">
     <div class="card">
       <img class="card__img" src="Baristapride.png" >
-        <div class="card__title">Baristapride</div>
-        <div class="card__subtitle">Short(200ML) : 400Kcal</div>
-        <div class="description">Espresso combined  with bittersweet mocha sauce and milk</div>
+        <div class="card__title">Barista pride Latte</div>
+        <div class="card__subtitle">Short(200ML) : 415 Kcal</div>
+        <div class="description">Barista Pride Latte</div>
         <div class="card__wrapper">
             <div class="card__price">₹250</div>
             <div class="button">
@@ -30,11 +30,11 @@
     </div>
     <div class="card">
       <img class="card__img" src="Toffeenut.png" >
-        <div class="card__title">Toffeenut</div>
-        <div class="card__subtitle">Short(200ML) : 415Kcal</div>
-        <div class="description">Espresso combined  with bittersweet mocha sauce and milk</div>
+        <div class="card__title">Toffee nut crunch Latte</div>
+        <div class="card__subtitle">Short(200ML) : 420 kcal</div>
+        <div class="description">Delight your senses with our Toffee Nut Crunch Latte. A perf...</div>
         <div class="card__wrapper">
-            <div class="card__price">$200</div>
+            <div class="card__price">₹299</div>
             <div class="button">
             <div class="button-wrapper">
               <div class="text">Order</div>
@@ -49,11 +49,11 @@
     </div>
     <div class="card">
       <img class="card__img" src="Bomboncloud.png" >
-        <div class="card__title">Bomboncloud</div>
-        <div class="card__subtitle">Short(200ML) : 415Kcal</div>
-        <div class="description">Espresso combined  with bittersweet mocha sauce and milk</div>
+        <div class="card__title">Bomb on cloud</div>
+        <div class="card__subtitle">Short(200ML) : 419 Kcal</div>
+        <div class="description">A layered treat with sweet condensed milk, blonde double shot ristretto, and smooth coconut flavored...</div>
         <div class="card__wrapper">
-            <div class="card__price">$200</div>
+            <div class="card__price">₹100</div>
             <div class="button">
             <div class="button-wrapper">
               <div class="text">Order</div>
@@ -69,10 +69,10 @@
     <div class="card">
       <img class="card__img" src="Cafeamericano.jpg" >
         <div class="card__title">Cafe Americano</div>
-        <div class="card__subtitle">Short(200ML) : 500Kcal</div>
-        <div class="description">Espresso combined  with bittersweet mocha sauce and milk</div>
+        <div class="card__subtitle">Short(200ML) : 450 kcal</div>
+        <div class="description">Rich in flavour, full-bodied espresso with hot water in true European style.</div>
         <div class="card__wrapper">
-            <div class="card__price">$200</div>
+            <div class="card__price">₹249</div>
             <div class="button">
             <div class="button-wrapper">
               <div class="text">Order</div>
@@ -88,10 +88,10 @@
     <div class="card">
       <img class="card__img" src="Cafemocha.jpg" >
         <div class="card__title">Cafe Mocha</div>
-        <div class="card__subtitle">Short(200ML) : 415Kcal</div>
-        <div class="description">Espresso combined  with bittersweet mocha sauce and milk</div>
+        <div class="card__subtitle">Short(200ML) : 340 kcal</div>
+        <div class="description">We combine our rich in flavour, full-bodied espresso with bittersweet mocha sauce and steamed milk, ...</div>
         <div class="card__wrapper">
-            <div class="card__price">$200</div>
+            <div class="card__price">₹249</div>
             <div class="button">
             <div class="button-wrapper">
               <div class="text">Order</div>
@@ -106,11 +106,11 @@
     </div>
     <div class="card">
       <img class="card__img" src="Cappucino.jpg" >
-        <div class="card__title">Cappucino</div>
-        <div class="card__subtitle">Short(200ML) : 415Kcal</div>
-        <div class="description">Espresso combined  with bittersweet mocha sauce and milk</div>
+        <div class="card__title">Cappuccino</div>
+        <div class="card__subtitle">Short(200ML) : 430 kcal</div>
+        <div class="description">Dark, Rich in flavour espresso lies in wait under a smoothed and stretched layer of thick foam. It's...</div>
         <div class="card__wrapper">
-            <div class="card__price">$200</div>
+            <div class="card__price">₹300</div>
             <div class="button">
             <div class="button-wrapper">
               <div class="text">Order</div>
@@ -125,11 +125,11 @@
     </div>
     <div class="card">
       <img class="card__img" src="CaramelMacchiato.jpg" >
-        <div class="card__title">Caramel Macchiat</div>
-        <div class="card__subtitle">Short(200ML) : 415Kcal</div>
-        <div class="description">Espresso combined  with bittersweet mocha sauce and milk</div>
+        <div class="card__title">Caramel Macchiato</div>
+        <div class="card__subtitle">Short(200ML) : 450 kcal</div>
+        <div class="description">Freshly steamed milk with vanilla-flavored syrup is marked with espresso and topped with caramel dri...</div>
         <div class="card__wrapper">
-            <div class="card__price">$200</div>
+            <div class="card__price">₹249</div>
             <div class="button">
             <div class="button-wrapper">
               <div class="text">Order</div>
@@ -145,10 +145,10 @@
     <div class="card">
       <img class="card__img" src="Chocolatecortado.jpg" >
         <div class="card__title">Chocolate Cortado</div>
-        <div class="card__subtitle">Short(200ML) : 415Kcal</div>
-        <div class="description">Espresso combined  with bittersweet mocha sauce and milk</div>
+        <div class="card__subtitle">Short(200ML) : 416 kcal</div>
+        <div class="description">A perfect espresso shot and mocha sauce, topped with steamed milk.</div>
         <div class="card__wrapper">
-            <div class="card__price">$200</div>
+            <div class="card__price">₹309</div>
             <div class="button">
             <div class="button-wrapper">
               <div class="text">Order</div>
@@ -163,11 +163,11 @@
     </div>
     <div class="card">
       <img class="card__img" src="Classichotcoffee.png" >
-        <div class="card__title">Classic Hotcoffee</div>
-        <div class="card__subtitle">Short(200ML) : 415Kcal</div>
-        <div class="description">Espresso combined  with bittersweet mocha sauce and milk</div>
+        <div class="card__title">Classic Hotcoffe</div>
+        <div class="card__subtitle">Short(200ML) : 420 kcal</div>
+        <div class="description">Savour our premium coffee made with top 3% Arabica beans in an all new avatar. Starbucks Signature e...</div>
         <div class="card__wrapper">
-            <div class="card__price">$200</div>
+            <div class="card__price">₹149</div>
             <div class="button">
             <div class="button-wrapper">
               <div class="text">Order</div>
@@ -181,12 +181,12 @@
       </div>
     </div>
     <div class="card">
-      <img class="card__img" src="Icedcaffemocha.jpg" >
-        <div class="card__title">Iced Cafe Mocha</div>
-        <div class="card__subtitle">Short(200ML) : 415Kcal</div>
+      <img class="card__img" src="Coffees.webp" >
+        <div class="card__title">Coffee</div>
+        <div class="card__subtitle">Short(200ML) : 430 kcal</div>
         <div class="description">Espresso combined  with bittersweet mocha sauce and milk</div>
         <div class="card__wrapper">
-            <div class="card__price">$200</div>
+            <div class="card__price">₹299</div>
             <div class="button">
             <div class="button-wrapper">
               <div class="text">Order</div>
@@ -202,10 +202,10 @@
     <div class="card">
       <img class="card__img" src="Coldcoffee.jpg" >
         <div class="card__title">Cold Coffee</div>
-        <div class="card__subtitle">Short(200ML) : 415Kcal</div>
-        <div class="description">Espresso combined  with bittersweet mocha sauce and milk</div>
+        <div class="card__subtitle">Short(200ML) : 435 kcal</div>
+        <div class="description">Our signature rich in flavour espresso blended with delicate vanilla flavour and milk to create a pe...</div>
         <div class="card__wrapper">
-            <div class="card__price">$200</div>
+            <div class="card__price">₹239</div>
             <div class="button">
             <div class="button-wrapper">
               <div class="text">Order</div>
@@ -220,11 +220,11 @@
     </div>
     <div class="card">
       <img class="card__img" src="Crunchyredhat.png" >
-        <div class="card__title">Crunchy Redhat</div>
-        <div class="card__subtitle">Short(200ML) : 415Kcal</div>
-        <div class="description">Espresso combined  with bittersweet mocha sauce and milk</div>
+        <div class="card__title">Crunchy Red hat Mocha Latte</div>
+        <div class="card__subtitle">Short(200ML) : 420 Kcal</div>
+        <div class="description">Almost too cute to drink, our Crunchy Red Hat Mocha Latte combines steamed milk, our signature espre...</div>
         <div class="card__wrapper">
-            <div class="card__price">$200</div>
+            <div class="card__price">₹249</div>
             <div class="button">
             <div class="button-wrapper">
               <div class="text">Order</div>
@@ -240,10 +240,10 @@
     <div class="card">
       <img class="card__img" src="Doppiofrappuccino.jpg" >
         <div class="card__title">Doppio Frappuccino</div>
-        <div class="card__subtitle">Short(200ML) : 415Kcal</div>
-        <div class="description">Espresso combined  with bittersweet mocha sauce and milk</div>
+        <div class="card__subtitle">Short(200ML) : 350 Kcal</div>
+        <div class="description">Our smooth signature Espresso Roast and its caramelly sweetness is at the very heart of everything w...</div>
         <div class="card__wrapper">
-            <div class="card__price">$200</div>
+            <div class="card__price">₹299</div>
             <div class="button">
             <div class="button-wrapper">
               <div class="text">Order</div>
@@ -259,10 +259,10 @@
     <div class="card">
       <img class="card__img" src="Doublechocolatechipfrappuccino.jpg" >
         <div class="card__title">Double Chocolate Chip Frappuccino</div>
-        <div class="card__subtitle">Short(200ML) : 415Kcal</div>
-        <div class="description">Espresso combined  with bittersweet mocha sauce and milk</div>
+        <div class="card__subtitle">Short(200ML) : 425 Kcal</div>
+        <div class="description">Rich mocha-flavored sauce meets up with chocolaty chips, milk and ice. Top it off with whipped vanil...</div>
         <div class="card__wrapper">
-            <div class="card__price">$200</div>
+            <div class="card__price">₹349</div>
             <div class="button">
             <div class="button-wrapper">
               <div class="text">Order</div>
