--- a/bookmytable.html
+++ b/bookmytable.html
@@ -1,422 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book My Table</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-    <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-            background-color: #f8f9fa;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .container {
-            background: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-            width: 400px;
-        }
-
-        h2 {
-            text-align: center;
-            color: #333;
-            margin-bottom: 20px;
-        }
-
-        .form-group {
-            margin-bottom: 15px;
-        }
-
-        label {
-            display: block;
-            font-weight: 600;
-            margin-bottom: 5px;
-            color: #555;
-        }
-
-        input, textarea {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 14px;
-        }
-
-        textarea {
-            resize: none;
-            height: 80px;
-        }
-
-        .btn {
-            width: 100%;
-            padding: 10px;
-            border: none;
-            background-color: #28a745;
-            color: #fff;
-            font-size: 16px;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background 0.3s ease;
-        }
-
-        .btn:hover {
-            background-color: #218838;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h2><i class="fas fa-utensils"></i> Book Your Table</h2>
-        <form id="bookingForm">
-            <div class="form-group">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" placeholder="Enter your name" required>
-            </div>
-
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="Enter your email" required>
-            </div>
-
-            <div class="form-group">
-                <label for="phone">Phone:</label>
-                <input type="tel" id="phone" name="phone" placeholder="Enter your phone number" required>
-            </div>
-
-            <div class="form-group">
-                <label for="date">Date:</label>
-                <input type="date" id="date" name="date" required>
-            </div>
-
-            <div class="form-group">
-                <label for="time">Time:</label>
-                <input type="time" id="time" name="time" required>
-            </div>
-
-            <div class="form-group">
-                <label for="guests">Number of Guests:</label>
-                <input type="number" id="guests" name="guests" min="1" max="20" required>
-            </div>
-
-            <div class="form-group">
-                <label for="requests">Special Requests:</label>
-                <textarea id="requests" name="requests" placeholder="Any special requests?"></textarea>
-            </div>
-
-            <button type="submit" class="btn">Book Now</button>
-        </form>
-    </div>
-    <script src="script.js"></script>
-</body>
-</html> -->
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book My Table</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-    <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-            background: linear-gradient(to right, #ff9966, #ff5e62);
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .container {
-            background: #fff;
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
-            width: 400px;
-            text-align: center;
-        }
-
-        h2 {
-            color: #333;
-            margin-bottom: 20px;
-            font-weight: 600;
-        }
-
-        .form-group {
-            margin-bottom: 20px;
-            text-align: left;
-        }
-
-        label {
-            display: block;
-            font-weight: 600;
-            margin-bottom: 5px;
-            color: #444;
-        }
-
-        input, textarea {
-            width: 100%;
-            padding: 12px;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            font-size: 14px;
-            transition: 0.3s;
-        }
-
-        input:focus, textarea:focus {
-            border-color: #ff5e62;
-            outline: none;
-            box-shadow: 0 0 5px rgba(255, 94, 98, 0.5);
-        }
-
-        textarea {
-            resize: none;
-            height: 100px;
-        }
-
-        .btn {
-            width: 100%;
-            padding: 12px;
-            border: none;
-            background: linear-gradient(to right, #ff9966, #ff5e62);
-            color: #fff;
-            font-size: 18px;
-            font-weight: 600;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: background 0.3s ease;
-        }
-
-        .btn:hover {
-            background: linear-gradient(to right, #ff5e62, #ff9966);
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h2><i class="fas fa-utensils"></i> Book Your Table</h2>
-        <form id="bookingForm">
-            <div class="form-group">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" placeholder="Enter your name" required>
-            </div>
-
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="Enter your email" required>
-            </div>
-
-            <div class="form-group">
-                <label for="phone">Phone:</label>
-                <input type="tel" id="phone" name="phone" placeholder="Enter your phone number" required>
-            </div>
-
-            <div class="form-group">
-                <label for="date">Date:</label>
-                <input type="date" id="date" name="date" required>
-            </div>
-
-            <div class="form-group">
-                <label for="time">Time:</label>
-                <input type="time" id="time" name="time" required>
-            </div>
-
-            <div class="form-group">
-                <label for="guests">Number of Guests:</label>
-                <input type="number" id="guests" name="guests" min="1" max="20" required>
-            </div>
-
-            <div class="form-group">
-                <label for="requests">Special Requests:</label>
-                <textarea id="requests" name="requests" placeholder="Any special requests?"></textarea>
-            </div>
-
-            <button type="submit" class="btn">Book Now</button>
-        </form>
-    </div>
-    <script src="script.js"></script>
-</body>
-</html> -->
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book My Table</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-    <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-            background: linear-gradient(to right, #ff9966, #ff5e62);
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            overflow: hidden;
-        }
-
-        .container {
-            background: #fff;
-            padding: 25px;
-            border-radius: 15px;
-            box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
-            width: 350px;
-            text-align: center;
-            animation: fadeIn 1s ease-in-out;
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(-20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        h2 {
-            color: #333;
-            margin-bottom: 15px;
-            font-weight: 600;
-            animation: slideIn 1s ease-in-out;
-        }
-
-        @keyframes slideIn {
-            from {
-                transform: translateX(-50px);
-                opacity: 0;
-            }
-            to {
-                transform: translateX(0);
-                opacity: 1;
-            }
-        }
-
-        .form-group {
-            margin-bottom: 15px;
-            text-align: left;
-            animation: fadeIn 1.5s ease-in-out;
-        }
-
-        label {
-            display: block;
-            font-weight: 600;
-            margin-bottom: 5px;
-            color: #444;
-        }
-
-        input, textarea {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            font-size: 14px;
-            transition: 0.3s;
-        }
-
-        input:focus, textarea:focus {
-            border-color: #ff5e62;
-            outline: none;
-            box-shadow: 0 0 10px rgba(255, 94, 98, 0.5);
-        }
-
-        textarea {
-            resize: none;
-            height: 80px;
-        }
-
-        .btn {
-            width: 100%;
-            padding: 12px;
-            border: none;
-            background: linear-gradient(to right, #ff9966, #ff5e62);
-            color: #fff;
-            font-size: 18px;
-            font-weight: 600;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: all 0.3s ease-in-out;
-            animation: popIn 1s ease-in-out;
-        }
-
-        .btn:hover {
-            background: linear-gradient(to right, #ff5e62, #ff9966);
-            transform: scale(1.05);
-        }
-
-        @keyframes popIn {
-            from {
-                transform: scale(0.8);
-                opacity: 0;
-            }
-            to {
-                transform: scale(1);
-                opacity: 1;
-            }
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h2><i class="fas fa-utensils"></i> Book Your Table</h2>
-        <form id="bookingForm">
-            <div class="form-group">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" placeholder="Enter your name" required>
-            </div>
-
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="Enter your email" required>
-            </div>
-
-            <div class="form-group">
-                <label for="phone">Phone:</label>
-                <input type="tel" id="phone" name="phone" placeholder="Enter your phone number" required>
-            </div>
-
-            <div class="form-group">
-                <label for="date">Date:</label>
-                <input type="date" id="date" name="date" required>
-            </div>
-
-            <div class="form-group">
-                <label for="time">Time:</label>
-                <input type="time" id="time" name="time" required>
-            </div>
-
-            <div class="form-group">
-                <label for="guests">Number of Guests:</label>
-                <input type="number" id="guests" name="guests" min="1" max="20" required>
-            </div>
-
-            <div class="form-group">
-                <label for="requests">Special Requests:</label>
-                <textarea id="requests" name="requests" placeholder="Any special requests?"></textarea>
-            </div>
-
-            <button type="submit" class="btn">Book Now</button>
-        </form>
-    </div>
-    <script src="script.js"></script>
-</body>
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -428,7 +9,7 @@
     <style>
         body {
             font-family: 'Poppins', sans-serif;
-            background: linear-gradient(to right, #5ad5f4, #0c66b5);
+            background: #051923;
             margin: 0;
             display: flex;
             justify-content: center;
@@ -438,8 +19,8 @@
         }
 
         .container {
-            background: #fff;
-            padding: 25px;
+            background: #003554;
+            padding: 5px 25px 25px 25px ;
             border-radius: 15px;
             box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
             width: 350px;
@@ -459,9 +40,10 @@
         }
 
         h2 {
-            color: #333;
+            color: #00A6FB;
+            font-size: 30px;
             margin-bottom: 15px;
-            font-weight: 600;
+            font-weight:bolder;
             animation: slideIn 1s ease-in-out;
         }
 
@@ -486,22 +68,25 @@
             display: block;
             font-weight: 600;
             margin-bottom: 5px;
-            color: #444;
+            color: #00A6FB;
         }
 
         input, textarea {
             width: 90%;
             padding: 10px;
-            border: 1px solid #ddd;
+            border: 1px solid #00A6FB;
             border-radius: 8px;
             font-size: 14px;
+            background: #003554;
+            color:white;
             transition: 0.3s;
         }
 
         input:focus, textarea:focus {
-            border-color: #5ad5f4;
+            border-color: #00A6FB;
+            background: #003554;
             outline: none;
-            box-shadow: 0 0 10px #5ad5f4;
+            box-shadow: 0 0 10px #00A6FB;
         }
 
         textarea {
